nginx-ingress:2.4.1/deployment/web1-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: web1-service
  namespace: default
spec:
  selector:
    name: web1
  ports:
    - protocol: TCP
      name: http
      port: 8081
      targetPort: 80
