nginx-ingress:2.4.1/deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-ingress1
spec:
  ingressClassName: nginx
  rules:
  - host: hello.info
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: web1-service
            port:
              number: 80
